# text_editor

./: .README.md.un~  .gitignore  .main.c.un~  Cargo.toml  README.md  dummy.c  dump.md  dump.txt  run.sh
src/: buffer.rs  cli.rs  controller.rs  editor.rs  keymap.rs  main.rs  renderer.rs  view.rs
src/renderer/: debug_terminal_renderer.rs  terminal_renderer.rs
