[package]
name = "text_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
fern = "0.6.2"
log = "0.4.18"
termion = "2.0.1"

[[bin]]
name = "edit"
path = "src/main.rs"
